--- a/main.css
+++ b/main.css
@@ -1,14 +1,19 @@
 div.container{
     width: 1000px;
-    height: 700px;
+    height: 77vh;
     margin: auto;
+}
+
+.wide {
+    width: 1250px !important;
 }
 
 body{
     background-color: #333333;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
     text-align: center;
+    height: 100vh;
 }
 
 div.title{
@@ -18,7 +23,7 @@ div.title{
 }
 
 #selectionDiv {
-    margin: 5vh 10vh;
+    margin: 5vh 5vw;
     text-align: center;
 }
 
@@ -39,4 +44,91 @@ button.selected {
 
 button:hover {
     background: darkslategrey;
+}
+
+h1, h2, h3 {
+    color: lightcoral;
+    padding-top: 15px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    color: rgb(240, 166, 166);
+}
+
+.left-column {
+    height: 100vh;
+    width: 25vw;
+    text-align: right;
+    float: left;
+    margin-top: -1rem;
+    padding: 0 5vw 0 0;
+    background: lightsalmon;
+}
+
+.left-column > div,
+.right-column > div {
+    margin-bottom: 10px;
+}
+
+.left-column > div:first-child {
+    margin-top: 40vh;
+}
+
+.right-column {
+    display:inline-block; 
+    padding: 20vh 5vw;
+}
+
+.home {
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 5vh;
+    display: inline-block;
+    margin:auto;
+}
+
+.next {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding-right: 3vw;
+    padding-bottom: 5vh;
+    float: right;
+}
+
+.next :after {
+    content:"\A";
+    border-style: solid;
+    border-width: 8px 0 8px 12px;
+    border-color: transparent transparent transparent rgb(240, 166, 166);
+    position: absolute;
+    right: 1vw;
+}
+
+.prev {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-left: 3vw;
+    padding-bottom: 5vh;
+    float: left;
+}
+
+.prev :before {
+    content:"\A";
+    border-style: solid;
+    border-width: 8px 12px 8px 0;
+    border-color: transparent rgb(240, 166, 166) transparent transparent;
+    position: absolute;
+    left: 1vw;
 }
