--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 div.container{
-    width: 1000px;
+    width: 70vw;
     height: 77vh;
     margin: auto;
 }
 
 .wide {
-    width: 1250px !important;
+    width: 80vw !important;
 }
 
 body{
