--- a/main.css
+++ b/main.css
@@ -92,7 +92,8 @@ a:hover {
 
 .right-column {
     display:inline-block; 
-    padding: 20vh 5vw;
+    padding-top: 15vh;
+    padding-left: 5vw;
 }
 
 .home {
